buttons no longer shifting on click, but now I want to set a growth limit to zombies

--- a/src/App.css
+++ b/src/App.css
@@ -72,6 +72,10 @@ body,
 .zombie {
   display: flex;
   flex-direction: column;
+  justify-content: flex-end;
+  align-items: center;
+  height: 200px;
+  width: 200px;
 }
 
 .human {
